# ChangeLog for app-pda/synce-libsynce
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-pda/synce-libsynce/Attic/ChangeLog,v 1.20 2007/02/21 23:00:35 peper Exp $

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

*synce-libsynce-0.9.2 (13 Jul 2006)

  13 Jul 2006; Alastair Tse <liquidx@gentoo.org> -synce-libsynce-0.7.ebuild,
  -synce-libsynce-0.8.1.ebuild, -synce-libsynce-0.9.0.ebuild,
  +synce-libsynce-0.9.2.ebuild:
  Version bump. Removed slang.h header include and replaced it with the single
  'offsetof' macro that it needed. Cleaned up old versions. (#135060)

  22 Jun 2006; Karol Wojtaszek <sekretarz@gentoo.org>
  +files/synce-libsynce-0.9.1-amd64.patch, synce-libsynce-0.9.1.ebuild:
  Added patch to support amd64 architecture

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org>
  synce-libsynce-0.9.1.ebuild:
  Mark 0.9.1 ~ia64

*synce-libsynce-0.9.1 (11 Jan 2006)

  11 Jan 2006; Chris White <chriswhite@gentoo.org>
  +synce-libsynce-0.9.1.ebuild:
  Version bump for bug #109724.

  05 Jun 2005; Simon Stelling <blubb@gentoo.org>
  synce-libsynce-0.9.0.ebuild:
  added ~amd64 keyword

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
  synce-libsynce-0.8.9.ebuild:
  Stable on ppc.

*synce-libsynce-0.9.0 (25 Sep 2004)

  25 Sep 2004; Alastair Tse <liquidx@gentoo.org> +synce-libsynce-0.9.0.ebuild:
  version bump (#61952)

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  synce-libsynce-0.7.ebuild:
  virtual/glibc -> virtual/libc

  05 Jun 2004; David Holm <dholm@gentoo.org> synce-libsynce-0.8.9.ebuild:
  Added to ~ppc.

  25 Apr 2004; Aron Griffis <agriffis@gentoo.org> synce-libsynce-0.7.ebuild,
  synce-libsynce-0.8.1.ebuild:
  Add die following econf for bug 48950

*synce-libsynce-0.8.9 (30 Mar 2004)

  30 Mar 2004; Troy Dack <troy@gentoo.org> synce-libsynce-0.8.9.ebuild,
  files/0.8.9/synce-libsynce-0.8.9-gcc33.patch: