@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-pda/synce-libsynce/Attic/synce-libsynce-0.9.1.ebuild,v 1.3 2006/06/22 10:31:55 sekretarz Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-pda/synce-libsynce/Attic/synce-libsynce-0.9.1.ebuild,v 1.4 2007/09/24 08:35:54 opfer Exp $
 
 inherit eutils
 
@@ -10,7 +10,7 @@ SRC_URI="mirror://sourceforge/synce/${P}.tar.gz"
 
 LICENSE="MIT"
 SLOT="0"
-KEYWORDS="~amd64 ~ia64 ~ppc ~x86"
+KEYWORDS="~amd64 ~ia64 ~ppc x86"
 IUSE=""
 
 DEPEND=">=dev-libs/check-0.8.3.1"
